5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1836_2604.log
== TEST (2019-06-27 11:46:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array(eval(input("matriz: ")))

fro i in range(shape(m)[0]):
	ṕrint(max(m[i]))

-- ERROR:
File "XXXX", line 5
    fro i in range(shape(m)[0]):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:46:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array(eval(input("matriz: ")))

for i in range(shape(m)[0]):
	ṕrint(max(m[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:47:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array(eval(input("matriz: ")))

for i in range(shape(m)[0]):
	print(max(m[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:47:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array(eval(input("matriz: ")))

for i in range(shape(m)[0]):
	print(max(m[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:47:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
m =array(eval(input("matriz: ")))

for i in range(shape(m)[0]):
	print(max(m[i]))

-- EXECUTION TIME:
1.20943
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
